<?xml version="1.0" encoding="utf-8"?>
<!-- Shared Admin Bottom Nav include in every admin screen CoordinatorLayout -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="bottom">

    <!-- Divider -->
    <View
        android:id="@+id/adminBottomNavDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/ms_border_default" />

    <!-- Nav bar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/adminBottomNav"
        android:layout_width="match_parent"
        android:layout_height="@dimen/admin_bottom_nav_height"
        android:background="@color/profile_nav_bg"
        android:elevation="0dp"
        android:paddingTop="@dimen/admin_bottom_nav_padding_top"
        android:paddingBottom="@dimen/admin_bottom_nav_padding_bottom">

        <!-- Animated Pill Indicator -->
        <View
            android:id="@+id/admin_nav_indicator"
            android:layout_width="@dimen/nav_pill_width"
            android:layout_height="@dimen/nav_pill_height"
            android:background="@drawable/bg_home_meta_pill"
            android:layout_marginTop="@dimen/space_4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/admin_guide_pill_bottom"
            app:layout_constraintStart_toStartOf="@id/adminNavDashboard"
            app:layout_constraintEnd_toEndOf="@id/adminNavDashboard" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/admin_guide_pill_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/main_bottom_nav_guideline" />

        <!-- Dashboard -->
        <LinearLayout
            android:id="@+id/adminNavDashboard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavCommandes"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavDashboardIcon"
                android:layout_width="@dimen/main_bottom_nav_icon_size"
                android:layout_height="@dimen/main_bottom_nav_icon_size"
                android:contentDescription="@string/cd_admin_dashboard"
                app:srcCompat="@drawable/ic_admin_shield"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavDashboardLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_title_dashboard"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="@dimen/admin_bottom_nav_label_margin_top"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- Commandes -->
        <LinearLayout
            android:id="@+id/adminNavCommandes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavProduits"
            app:layout_constraintStart_toEndOf="@id/adminNavDashboard"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavCommandesIcon"
                android:layout_width="@dimen/main_bottom_nav_icon_size"
                android:layout_height="@dimen/main_bottom_nav_icon_size"
                android:contentDescription="@string/cd_admin_orders"
                app:srcCompat="@drawable/ic_admin_nav_commandes"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavCommandesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_title_orders"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="@dimen/admin_bottom_nav_label_margin_top"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- Produits -->
        <LinearLayout
            android:id="@+id/adminNavProduits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavClients"
            app:layout_constraintStart_toEndOf="@id/adminNavCommandes"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavProduitsIcon"
                android:layout_width="@dimen/main_bottom_nav_icon_size"
                android:layout_height="@dimen/main_bottom_nav_icon_size"
                android:contentDescription="@string/cd_admin_products"
                app:srcCompat="@drawable/ic_admin_nav_produits"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavProduitsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_nav_products"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="@dimen/admin_bottom_nav_label_margin_top"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- Clients -->
        <LinearLayout
            android:id="@+id/adminNavClients"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavNotifications"
            app:layout_constraintStart_toEndOf="@id/adminNavProduits"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavClientsIcon"
                android:layout_width="@dimen/main_bottom_nav_icon_size"
                android:layout_height="@dimen/main_bottom_nav_icon_size"
                android:contentDescription="@string/cd_admin_clients"
                app:srcCompat="@drawable/ic_admin_nav_clients"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavClientsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_title_clients"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="@dimen/admin_bottom_nav_label_margin_top"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- Notifications -->
        <LinearLayout
            android:id="@+id/adminNavNotifications"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/space_8"
            android:paddingBottom="@dimen/space_8"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@id/adminNavSettings"
            app:layout_constraintStart_toEndOf="@id/adminNavClients"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavNotificationsIcon"
                android:layout_width="@dimen/main_bottom_nav_icon_size"
                android:layout_height="@dimen/main_bottom_nav_icon_size"
                android:contentDescription="@string/cd_admin_notifications"
                app:srcCompat="@drawable/ic_admin_nav_notifications"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavNotificationsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_nav_notifs"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="@dimen/admin_bottom_nav_label_margin_top"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- ParamÃ¨tres (hidden from bottom nav, now moved to top bar) -->
        <LinearLayout
            android:id="@+id/adminNavSettings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:orientation="vertical"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/adminNavNotifications"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/adminNavSettingsIcon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:contentDescription="@string/cd_admin_settings"
                app:srcCompat="@drawable/ic_admin_nav_settings"
                app:tint="@color/home_nav_inactive" />

            <TextView
                android:id="@+id/adminNavSettingsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/admin_title_settings"
                android:textSize="@dimen/text_size_overline"
                android:textColor="@color/home_nav_inactive"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/manrope_regular"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>
