...
    android:background="@color/home_screen_bg"
    android:paddingStart="@dimen/screen_padding_horizontal"
    android:paddingEnd="@dimen/screen_padding_horizontal"
    tools:context=".LoadingScreen">

    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_logo"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@id/tvAppName"
...
